# RaTuS

./: README.md  makefile
.github/workflows/: test.yml
RaTuS/: Cargo.toml  configs.json
RaTuS/client/: Cargo.toml
RaTuS/client/examples/: local_client.rs
RaTuS/client/src/: client.rs  error.rs
RaTuS/logs/: ratus-1_log.txt  ratus-2_log.txt  ratus-3_log.txt  ratus-test-app_log.txt
RaTuS/ratus/: Cargo.toml
RaTuS/ratus/src/: app.rs  client.rs  lib.rs  main.rs
RaTuS/ratus/src/network/: api.rs  management.rs  raft.rs  raft_network_impl.rs
RaTuS/ratus/src/store/: log_store.rs  mod.rs
RaTuS/ratus/tests/cluster/: test_cluster.rs
RaTuS/server/: Cargo.toml
RaTuS/server/src/: cli.rs  command.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs
RaTuS/system/: Cargo.toml
RaTuS/system/src/: benchmark.rs  config.rs  lib.rs  path.rs
RaTuS/system/src/env/: config.rs
RaTuS/system/src/logger/: debug.rs  mod.rs  production.rs
RaTuS/tuple_space/: Cargo.toml
RaTuS/tuple_space/client/: Cargo.toml
RaTuS/tuple_space/client/examples/: local_client.rs
RaTuS/tuple_space/client/src/: client.rs  lib.rs
RaTuS/tuple_space/core/: Cargo.toml
RaTuS/tuple_space/core/src/: error.rs  lib.rs  mutex_store.rs  tuple.rs  types.rs  vec_store.rs
RaTuS/tuple_space/server/: Cargo.toml
RaTuS/tuple_space/server/examples/: todo.txt
RaTuS/tuple_space/server/src/: command.rs  command_result.rs  error.rs  handlers.rs  routes.rs  types.rs
RaTuS/tuple_space/src/: error.rs  mutex_store.rs  query_tuple.rs  store.rs  vec_store.rs
RaTuS/tuple_space/tests/: calculate.rs  threads.rs
(+2 files in other folders)
