[package]
name = "ratus"
version = "0.1.0"
edition = "2021"

[dependencies]
openraft = { git = "https://github.com/datafuselabs/openraft", branch = "main", commit = "86a338f", features = ["serde", "type-alias"] }

actix-web = "4.0.0-rc.2"
clap = { version = "4.1.11", features = ["derive", "env"] }
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "1.0", default-features = false, features = ["sync"] }
maplit = "1.0.2"
anyhow = "1.0.86"
ts_core = { path = "../tuple_space/core" }
system = { path = "../system" }

[package.metadata.docs.rs]
all-features = true
