[package]
name = "ts_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0"
log = "0.4"
env_logger = "0.11.3"
clap = "2.21.1"
toml = "0.8.13"
tuple_space = { path = "../core" }
system = { path = "../../system"}